--- a/public/404.html
+++ b/public/404.html
@@ -1,69 +1,62 @@
 <!doctype html>
-<html>
+<html class="text-base-black">
   <head>
-    <title>The page you were looking for doesn't exist (404)</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>ご指定のページが見つかりません</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" charset="utf-8" />
     <style>
-      .rails-default-error-page {
-        background-color: #efefef;
-        color: #2e2f30;
+      html {
+        color: #292524FF;
+      }
+      body {
+        background-color: #E7E5E4FF;
+        max-width: 640px;
+        margin: 0 auto;
+        min-height: 100vh;
+      }
+      main {
+        padding-bottom: 0.5rem;
+        flex: 1;
+        background-color: #FFFFFF;
+      }
+      .container {
+        margin: 2rem auto;
+        padding: 2rem;
         text-align: center;
-        font-family: arial, sans-serif;
-        margin: 0;
+        font-size: 1.125rem;
+        max-width: 66.6667%;
       }
-
-      .rails-default-error-page div.dialog {
-        width: 95%;
-        max-width: 33em;
-        margin: 4em auto 0;
+      .container h1 {
+        font-size: 1.25rem;
+        font-weight: bold;
       }
-
-      .rails-default-error-page div.dialog > div {
-        border: 1px solid #ccc;
-        border-right-color: #999;
-        border-left-color: #999;
-        border-bottom-color: #bbb;
-        border-top: #b00100 solid 4px;
-        border-top-left-radius: 9px;
-        border-top-right-radius: 9px;
-        background-color: white;
-        padding: 7px 12% 0;
-        box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+      .container h2 {
+        margin-bottom: 2rem;
       }
-
-      .rails-default-error-page h1 {
-        font-size: 100%;
-        color: #730e15;
-        line-height: 1.5em;
+      .container p {
+        margin-bottom: 4rem;
+        font-size: 1rem;
+        text-align: left;
       }
-
-      .rails-default-error-page div.dialog > p {
-        margin: 0 0 1em;
-        padding: 1em;
-        background-color: #f7f7f7;
-        border: 1px solid #ccc;
-        border-right-color: #999;
-        border-left-color: #999;
-        border-bottom-color: #999;
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px;
-        border-top-color: #dadada;
-        color: #666;
-        box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+      .link {
+        font-size: 1.125rem;
+        font-weight: 500;
+        text-decoration: none;
+        color: inherit;
+      }
+      .link:hover {
+        text-decoration: underline;
       }
     </style>
   </head>
 
-  <body class="rails-default-error-page">
-    <!-- This file lives in public/404.html -->
-    <div class="dialog">
-      <div>
-        <h1>The page you were looking for doesn't exist.</h1>
-        <p>You may have mistyped the address or the page may have moved.</p>
+  <body>
+    <main>
+      <div class="container">
+        <h1>ご指定のページが見つかりません</h1>
+        <h2>404 Not Found</h2>
+        <p>アドレスが間違っているか、ページが移動した可能性があります。</p>
+        <a href="/" class="link">トップページに戻る</a>
       </div>
-      <p>
-        If you are the application owner check the logs for more information.
-      </p>
-    </div>
+    </main>
   </body>
 </html>
